# pipeline_analise_fraudes_pyspark

./: README.md  pyproject.toml
config/: settings.yaml
data/output/relatorio/: .part-00000-06cb1ac6-e582-47dd-9065-c8d6406582f4-c000.snappy.parquet.crc  part-00000-06cb1ac6-e582-47dd-9065-c8d6406582f4-c000.snappy.parquet
src/: main.py
src/config/: settings.py
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: transformations.py
src/session/: spark_session.py
src/trabalho_pipeline.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py
tests/unit/: test_data_handler.py  test_settings.py  test_transformations.py
